Fix say-hello visibility & animation, add person name to closed title on /people

--- a/sass/modules/_layout.scss
+++ b/sass/modules/_layout.scss
@@ -2036,6 +2036,8 @@ footer.site-footer{
     padding: 90px 40px 0 60px;
     max-width: 800px;
     margin: 0 auto;
+    -webkit-transition: all .3s; /* Safari */
+    transition: all .3s;
 
      @media($bp-smaller-than-tablet){
      	top:75px;
@@ -2123,6 +2125,8 @@ span#back_tip{
 	top: 168px;
 	width:130px;
 	position: fixed;
+	-webkit-transition: all .3s; /* Safari */
+    transition: all .3s;
 }
 
 span#project_tip{
@@ -2224,6 +2228,8 @@ span#project_tip{
 	right:15px;
     
     cursor: pointer;
+    -webkit-transition: all .3s; /* Safari */
+    transition: all .3s;
 
     @media($bp-smaller-than-tablet){
      	font-size: 35px;
